<resources>
    <string name="app_name">Mevzubahis</string>
    <string name="facebook_app_id">398779563807352</string>
    <string name="about">Hakkında</string>
    <string name="settings">Ayarlar</string>
    <string name="skip">Geç</string>
    <string name="create_new_bet">Yeni İddialaşma Yarat</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Ana Sayfa</string>
    <string name="nav_photos">Profil</string>
    <string name="nav_movies">Bedava Puan </string>
    <string name="nav_notifications">Bildirimler</string>
    <string name="nav_settings">Ayarlar</string>
    <string name="nav_about_us">Hakkımızda</string>

    <string name="openDrawer">open drawer</string>
    <string name="closeDrawer">close drawer</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Ana Sayfa</item>
        <item>Profil</item>
        <item>Bedava Puan</item>
        <item>Bildirimler</item>
        <item>Ayarlar</item>
    </string-array>

    <string name="activity_title_about_us">Hakkımızda</string>
    <string name="activity_title_privacy_policy">Gizlilik Politikası</string>
    <string name="action_clear_all">Temizle</string>
    <string name="action_logout">Oturumu Kapat</string>
    <string name="action_mark_all_read">Mark All as Read</string>
    <string name="privacy_policy">Gizlilik Politikası</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="other">Diğer</string>
    <string name="statistics">Profil</string>
    <string name="total_coins">Toplam Puan Miktarı</string>
    <string name="win_lose_ratio">Kazanma/Kaybetme Oranı:</string>
    <string name="bets_lost">Kaybedilen İddalaşmalar:</string>
    <string name="bets_won">Kazanılan İddialaşmalar:</string>
    <string name="total_coins1">Toplam Puan Miktarı:</string>
    <string name="bets_won1">Kazanılan İddialaşmalar:</string>
    <string name="bets_lost1">Kaybedilen İddalaşmalar:</string>
    <string name="win_lose_ratio1">Kazanma/Kaybetme Oranı:</string>
    <string name="cancel_login">Login Cancelled</string>
    <string name="error_login">Login Error</string>
    <string name="title_activity_bets">İddialaşmalar</string>
    <string name="action_settings">Ayarlar</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="watch_ads">İzle!</string>
    <string name="place_holder_match">Loading Matches</string>
    <string name="home_wins">Ev Sahibi Takım Yener</string>
    <string name="draw">Berabere Biter</string>
    <string name="away_wins">Misafir Takım Yener</string>

</resources>
