<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="ege.mevzubahis.Fragments.StatsFragment"
    >


  <TextView
      android:text="@string/statistics"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentTop="true"
      android:layout_centerHorizontal="true"
      android:layout_marginTop="125dp"
      android:id="@+id/textView2"
      android:textStyle="bold"
      android:textSize="20sp"
      />
  <TextView
      android:text="@string/total_coins1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/textView2"
      android:layout_toLeftOf="@+id/textView2"
      android:layout_toStartOf="@+id/textView2"
      android:layout_marginRight="28dp"
      android:layout_marginEnd="28dp"
      android:layout_marginTop="80dp"
      android:id="@+id/textView3"
      />
  <TextView
      android:text="@string/bets_won1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_below="@+id/textView5"
      android:layout_alignLeft="@+id/textView5"
      android:layout_alignStart="@+id/textView5"
      android:layout_marginTop="46dp"
      android:id="@+id/textView6"
      />
  <TextView
      android:text="@string/win_lose_ratio1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:id="@+id/textView4"
      android:layout_centerVertical="true"
      android:layout_alignLeft="@+id/textView3"
      android:layout_alignStart="@+id/textView3"
      />
  <TextView
      android:text="@string/bets_lost1"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="43dp"
      android:id="@+id/textView5"
      android:layout_below="@+id/textView4"
      android:layout_alignLeft="@+id/textView4"
      android:layout_alignStart="@+id/textView4"
      />
</RelativeLayout>
