<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ege.mevzubahis.Activities.BetsActivity$PlaceholderFragment">

  <TextView
      android:id="@+id/match1"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:text="@string/place_holder_match"
      android:textAllCaps="true"
      android:textStyle="bold"
      android:layout_marginTop="133dp"
      android:layout_alignParentTop="true"
      android:layout_alignLeft="@+id/button2"
      android:layout_alignStart="@+id/button2"
      android:layout_marginLeft="28dp"
      android:layout_marginStart="28dp"
      />
  <Button
      android:id="@+id/button2"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentLeft="true"
      android:layout_alignParentStart="true"
      android:layout_below="@+id/match1"
      android:layout_marginLeft="15dp"
      android:layout_marginStart="15dp"
      android:layout_marginTop="21dp"
      android:text="@string/home_wins"
      android:background="@color/colorAccent"
      android:textColor="@android:color/white"
      />
  <Button
      android:id="@+id/button3"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignTop="@+id/button2"
      android:layout_centerHorizontal="true"
      android:text="@string/draw"
      android:background="@color/colorAccent"
      android:textColor="@android:color/white"
      />
  <Button
      android:id="@+id/button4"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_alignParentEnd="true"
      android:layout_alignParentRight="true"
      android:layout_alignTop="@+id/button3"
      android:layout_marginEnd="11dp"
      android:layout_marginRight="11dp"
      android:text="@string/away_wins"
      android:background="@color/colorAccent"
      android:textColor="@android:color/white"
      />


</RelativeLayout>
